--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>vue3</title>
+    <title>后台管理系统</title>
   </head>
   <body>
-    <div id="app">   
-        hello world
-    </div>
+    <div id="app"></div>
   </body>
 </html>
